evaluation/rq1/sota/mythril/execution_logs/0x0xb5################################15109_eth.txt
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xb5################################15109_eth/ITMCoin.sol:692:1: SyntaxError: Source file requires different compiler version (current compiler is 0.4.24+commit.e67f0147.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity 0.4.25;
^---------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.4.25"

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xb5################################15109_eth/ITMCoin_0.sol:692:1: SyntaxError: Source file requires different compiler version (current compiler is 0.4.24+commit.e67f0147.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity 0.4.25;
^---------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.4.25"

